# naminsight

./: .gitignore  Dockerfile  Dockerfile.sandbox  README.md  app.py  docker-compose.yml  pyproject.toml
src/agents/: architect.py  critic.py  dispatcher.py  governor.py
src/core/: llm_factory.py  memory.py  state.py  workflow.py
src/tools/: python_sandbox.py  rag_engine.py  sql_engine.py
