[project]
name = "naminsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "chainlit>=2.10.0",
    "docker>=7.1.0",
    "fastembed>=0.8.0",
    "langchain-anthropic>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.22",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "qdrant-client>=1.17.1",
    "sqlglot>=30.0.3",
]
